# bliss_benchmark

./: .clang-format  .gitignore  .gitmodules  APPROACHES.md  CMakeLists.txt  LICENSE  README.md  main.cpp  test.data
.github/workflows/: clang-format-check.yml  cmake-single-platform.yml
data/: example.data
notebook/: heatmaps.ipynb
script/: bench.py  bench_rocks.py  data_gen.py  generate.sh
script/infra/: db.py  pybliss.py  pybods.py  util.py
src/: bliss.cpp  bliss_bench.cpp
src/bepsilon/: backing_store.h  betree.h  debug.h  swap_space.h
src/bliss/: bench_ART.h  bench_alex.h  bench_art.h  bench_betree.h  bench_bptree.h  bench_btree.h  bench_byteslice.h  bench_columnsketches.h  bench_csbtree.h  bench_imprints.h  bench_leveldb.h  bench_lipp.h  bench_pgm.h  bench_rax.h  bench_skiplist.h  bliss_index.h
src/bliss/util/: args.h  config.h  execute.h  reader.cpp  reader.h  timer.h
tests/: CMakeLists.txt  bliss_index_tests.h  unit_test_exists.sh
tests/test_alex/: CMakeLists.txt  alex_tests.cpp
tests/test_art/: art_tests.cpp
tests/test_bptree/: CMakeLists.txt  bptree_tests.cpp
tests/test_btree/: btree_tests.cpp
tests/test_csbtree/: csbtree_tests.cpp
tests/test_imprints/: imprint_tests.cpp
tests/test_leveldb/: leveldb_tests.cpp
tests/test_lipp/: lipp_tests.cpp
tests/test_pgm/: pgm_tests.cpp
tests/test_skiplist/: skiplist_tests.cpp
